--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
     
     <section id="specialty" class="section">
-        <h2>Specialist</h2>
+        <h2>Speciality</h2>
         <p>Reveal your skin's true beauty with our skilled specialists! Whether tackling stubborn acne or turning back the clock on aging, we provide customized treatments that empower your glow. Discover the secret to radiant skin—your best self is just a treatment away! <br>To know more about our specialties, click the "Read More" button.</p>
         <a href="/components/specialty.html" class="btn" onclick="changeButtonColor(this)">Read More</a>
     </section>
