--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <div class="navbar">
             <div class="navbar-left">
                 <a href="#"><img src="images/logo1.png" alt="The Humanitarian Clinic Logo" class="logo"></a>
-                <a href="#"><h1>THE HUMANITARIAN CLINIC :</h1>
-                <h2 class="navbar-title">SKIN, HAIR & LASER CENTRE</h2></a>
+                <a href="#" class="navbar-text">
+                    <h1>THE HUMANITARIAN CLINIC :</h1>
+                    <h2 class="navbar-title">SKIN, HAIR & LASER CENTRE</h2>
+                </a>
             </div>
             <div class="navbar-right">
                 <button class="menu-toggle" onclick="toggleMenu()">☰</button> <!-- Menu icon for mobile -->
