--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     
     <section id="contact" class="section">
         <h2>Contact Us</h2>
-        <p>Get in touch for consultations and appointments.</p>
+        <p> We offer expert consultancy services with no appointment needed. Simply walk in at your convenience!</p>
         <p>Email: thehumanitarianclinic@gmail.com</p>
         <p>Phone: +91 9321652496 / +91 9702891624</p>
         <a href="/components/contactus.html" class="btn" onclick="changeButtonColor(this)">Read More</a>
