--- a/index.html
+++ b/index.html
@@ -143,47 +143,45 @@
     </section>
 
     <footer>
-        <div class="footer-container">
-            <div class="working-hours fade-in">
-                <h4>Operating Hours</h4>
-                <ul>
-                    <li>
-                        <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Saturday:</span> <div class="timing">Closed</div>
-                    </li>
-                    <li>
-                        <span>Sunday:</span> <div class="timing">Closed</div>
-                    </li>
-                </ul>
-            </div>
-            
-            <div class="social-links fade-in">
-                <h4>Connect with Us</h4>
-                <div class="icon-group">
-                    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                </div>
+    <div class="footer-container">
+        <div class="working-hours fade-in">
+            <h4>Operating Hours</h4>
+            <ul>
+                <li>
+                    <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li class="closed-days">
+                    <span>Saturday & Sunday:</span>
+                    <div class="timing">Closed</div>
+                </li>
+            </ul>
+        </div>
+        
+        <div class="social-links fade-in">
+            <h4>Connect with Us</h4>
+            <div class="icon-group">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
+    </div>
 
-        <div class="footer-bottom fade-in">
-            <p>&copy; The Humanitarian Clinic 2024 </p>
-        </div>
-    </footer>
+    <div class="footer-bottom fade-in">
+        <p>&copy; The Humanitarian Clinic 2024 </p>
+    </div>
+</footer>
 
 </body>
 </html>
