--- a/index.html
+++ b/index.html
@@ -145,29 +145,36 @@
     <footer>
     <div class="footer-container">
         <div class="working-hours fade-in">
-            <h4>Operating Hours</h4>
-            <ul>
-                <li>
-                    <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li>
-                    <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li>
-                    <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li>
-                    <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li>
-                    <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li class="closed-days">
-                    <span>Saturday & Sunday:</span>
-                    <div class="timing">Closed</div>
-                </li>
-            </ul>
-        </div>
+    <h4>Operating Hours</h4>
+    <ul>
+        <li>
+            <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+        </li>
+        <li>
+            <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+        </li>
+        <li>
+            <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+        </li>
+        <li>
+            <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+        </li>
+        <li>
+            <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+        </li>
+        <!-- Separate lines for Saturday and Sunday, shared "Closed" below -->
+        <li class="weekend">
+            <span>Saturday:</span> 
+        </li>
+        <li class="weekend">
+            <span>Sunday:</span>
+        </li>
+        <li class="closed-days">
+            <div class="timing">Closed</div>
+        </li>
+    </ul>
+</div>
+
         
         <div class="social-links fade-in">
             <h4>Connect with Us</h4>
