--- a/index.html
+++ b/index.html
@@ -162,15 +162,12 @@
         <li>
             <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
         </li>
-        <!-- Separate lines for Saturday and Sunday, shared "Closed" below -->
-        <li class="weekend">
-            <span>Saturday:</span> 
+        <!-- Separate Saturday and Sunday as distinct days -->
+        <li class="saturday">
+            <span>Saturday:</span> <div class="timing">Closed</div>
         </li>
-        <li class="weekend">
-            <span>Sunday:</span>
-        </li>
-        <li class="closed-days">
-            <div class="timing">Closed</div>
+        <li class="sunday">
+            <span>Sunday:</span> <div class="timing">Closed</div>
         </li>
     </ul>
 </div>
