--- a/index.html
+++ b/index.html
@@ -146,29 +146,27 @@
     <div class="footer-container">
         <div class="working-hours fade-in">
             <h4>Operating Hours</h4>
-            <ul>
-                <li>
-                    <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li>
-                    <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li>
-                    <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li>
-                    <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li>
-                    <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                </li>
-                <li class="saturday">
-                    <span>Saturday:</span> <div class="timing">Closed</div>
-                </li>
-                <li class="sunday">
-                    <span>Sunday:</span> <div class="timing">Closed</div>
-                </li>
-            </ul>
+ <ul>
+    <li>
+        <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+    </li>
+    <li>
+        <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+    </li>
+    <li>
+        <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+    </li>
+    <li>
+        <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+    </li>
+    <li>
+        <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+    </li>
+    <li class="weekend">
+        Closed
+    </li>
+</ul>
+
         </div>
         
         <div class="social-links fade-in">
