--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="footer-container">
         <div class="working-hours fade-in">
             <h4>Operating Hours</h4>
- <ul>
+                <ul>
     <li>
         <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
     </li>
@@ -162,10 +162,13 @@
     <li>
         <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
     </li>
-    <li class="weekend">
+    <li class="closed-days">
+        <span>Saturday:</span>
+        <span>Sunday:</span>
         Closed
     </li>
 </ul>
+
 
         </div>
         
