--- a/index.html
+++ b/index.html
@@ -146,30 +146,26 @@
     <div class="footer-container">
         <div class="working-hours fade-in">
             <h4>Operating Hours</h4>
-                <ul>
-    <li>
-        <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-    </li>
-    <li>
-        <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-    </li>
-    <li>
-        <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-    </li>
-    <li>
-        <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-    </li>
-    <li>
-        <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-    </li>
-    <li class="closed-days">
-        <span>Saturday:</span>
-        <span>Sunday:</span>
-        Closed
-    </li>
-</ul>
-
-
+            <ul>
+                <li>
+                    <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li class="weekend">
+                    <span>Saturday & Sunday:</span> <div class="timing">Closed</div>
+                </li>
+            </ul>
         </div>
         
         <div class="social-links fade-in">
@@ -185,6 +181,7 @@
         <p>&copy; The Humanitarian Clinic 2024 </p>
     </div>
 </footer>
+
 
 
 
