--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <li>
                     <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
-                <li class="weekend">
+                <li class="closed-days">
                     <span>Saturday & Sunday:</span> <div class="timing">Closed</div>
                 </li>
             </ul>
