--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
                     <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
                 <li class="closed-days">
-                    <span><strong>Saturday & Sunday</strong></span>
-                    <span class="timing">Closed</span>
+                    <span><strong>Saturday & Sunday :</strong></span> <span class="timing">Closed</span>
                 </li>
             </ul>
         </div>
