--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <h4>Connect with Us</h4>
             <div class="icon-group">
                 <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>s
             </div>
         </div>
     </div>
