--- a/index.html
+++ b/index.html
@@ -144,40 +144,36 @@
 
 <footer>
     <div class="footer-container">
-        <div class="footer-section">
-            <div class="working-hours fade-in">
-                <h4>Operating Hours</h4>
-                <ul>
-                    <li>
-                        <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li>
-                        <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
-                    </li>
-                    <li class="closed-days">
-                        <span>Saturday & Sunday:</span> 
-                        <div class="timing">Closed</div>
-                    </li>
-                </ul>
-            </div>
+        <div class="footer-section working-hours fade-in">
+            <h4>Operating Hours</h4>
+            <ul>
+                <li>
+                    <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li>
+                    <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                </li>
+                <li class="closed-days">
+                    <span>Saturday & Sunday</span> 
+                    <div class="timing">Closed</div>
+                </li>
+            </ul>
         </div>
 
-        <div class="footer-section">
-            <div class="social-links fade-in">
-                <h4>Connect with Us</h4>
-                <div class="icon-group">
-                    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                </div>
+        <div class="footer-section social-links fade-in">
+            <h4>Connect with Us</h4>
+            <div class="icon-group">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </div>
@@ -186,9 +182,6 @@
         <p>&copy; The Humanitarian Clinic 2024 </p>
     </div>
 </footer>
-
-
-
 
 </body>
 </html>
