--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <footer>
     <div class="footer-container">
-        <div class="footer-section working-hours fade-in">
+        <div class="working-hours fade-in">
             <h4>Operating Hours</h4>
             <ul>
                 <li>
@@ -163,13 +163,14 @@
                     <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
                 <li class="closed-days">
-                    <span>Saturday & Sunday</span> 
-                    <div class="timing">Closed</div>
+                    <span>Saturday & Sunday</span> <div class="timing">Closed</div>
                 </li>
             </ul>
         </div>
 
-        <div class="footer-section social-links fade-in">
+        <div class="footer-divider"></div> <!-- Divider between working hours and social links -->
+
+        <div class="social-links fade-in">
             <h4>Connect with Us</h4>
             <div class="icon-group">
                 <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
@@ -179,9 +180,10 @@
     </div>
 
     <div class="footer-bottom fade-in">
-        <p>&copy; The Humanitarian Clinic 2024 </p>
+        <p>&copy; The Humanitarian Clinic 2024</p>
     </div>
 </footer>
+
 
 </body>
 </html>
