--- a/index.html
+++ b/index.html
@@ -148,22 +148,22 @@
             <h4>Operating Hours</h4>
             <ul>
                 <li>
-                    <span>Monday :</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                    <span>Monday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
                 <li>
-                    <span>Tuesday :</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                    <span>Tuesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
                 <li>
-                    <span>Wednesday :</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                    <span>Wednesday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
                 <li>
-                    <span>Thursday :</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                    <span>Thursday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
                 <li>
-                    <span>Friday :</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
+                    <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
                 <li class="closed-days">
-                    <span>Saturday & Sunday :</span> <div class="timing">Closed</div>
+                    <span>Saturday & Sunday</span> <div class="timing">Closed</div>
                 </li>
             </ul>
         </div>
