--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <span>Friday:</span> <div class="timing">8:30am - 1pm | 4pm - 7:30pm</div>
                 </li>
                 <li class="closed-days">
-                    <span>Saturday & Sunday</span> <div class="timing">Closed</div>
+                    <span>Saturday & Sunday :</span> <div class="timing">Closed</div>
                 </li>
             </ul>
         </div>
