--- a/index.html
+++ b/index.html
@@ -46,26 +46,56 @@
     
     <!--Gallery Section -->
 
-    <div class="gallery-section">
-        <h2 class="gallery-heading">Gallery</h2>
-        <div class="gallery">
-            <div class="gallery-wrapper">
-            <!-- 14 images for the gallery -->
-            <img src="images/gallery/1.jpeg" alt="Gallery Image 1" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/3.jpeg" alt="Gallery Image 3" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/4.jpeg" alt="Gallery Image 4" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/5.jpeg" alt="Gallery Image 5" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/7.jpeg" alt="Gallery Image 7" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/10.jpeg" alt="Gallery Image 10" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/11.jpeg" alt="Gallery Image 11" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/12.jpeg" alt="Gallery Image 12" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/13.jpeg" alt="Gallery Image 13" class="gallery-image" onclick="toggleImage(this)">
-            <img src="images/gallery/14.jpeg" alt="Gallery Image 14" class="gallery-image" onclick="toggleImage(this)">
-            <!-- Continue adding images up to image14.jpg -->
-        </div>
-        <div id="overlay" onclick="closeImage()"></div>
-    </div>
+   <div class="gallery-title">
+        <h2>Gallery</h2>
+      </div>
+    <div class="gallery-container">
+        <div class="gallery-scroll">
+          <div class="arrow left-arrow" onclick="scrollGallery(-1)">&#8249;</div>
+          <div class="gallery">
+             <!-- Add your images here -->
+             <img src="/images/gallery/1.jpg" alt="Image 1" onclick="openImage(this)">
+             <img src="/images/gallery/2.jpg" alt="Image 2" onclick="openImage(this)">
+             <img src="/images/gallery/3.jpg" alt="Image 3" onclick="openImage(this)">
+             <img src="/images/gallery/4.jpg" alt="Image 4" onclick="openImage(this)">
+             <img src="/images/gallery/5.jpg" alt="Image 5" onclick="openImage(this)">
+             <img src="/images/gallery/6.jpg" alt="Image 6" onclick="openImage(this)">
+             <img src="/images/gallery/7.jpg" alt="Image 7" onclick="openImage(this)">
+             <img src="/images/gallery/8.jpg" alt="Image 8" onclick="openImage(this)">
+             <img src="/images/gallery/9.jpg" alt="Image 9" onclick="openImage(this)">
+             <img src="/images/gallery/10.jpg" alt="Image 10" onclick="openImage(this)">
+             <img src="/images/gallery/11.jpg" alt="Image 11" onclick="openImage(this)">
+             <img src="/images/gallery/12.jpg" alt="Image 12" onclick="openImage(this)">
+             <img src="/images/gallery/13.jpg" alt="Image 13" onclick="openImage(this)">
+             <img src="/images/gallery/14.jpg" alt="Image 14" onclick="openImage(this)">
+             <img src="/images/gallery/15.jpg" alt="Image 15" onclick="openImage(this)">
+             <img src="/images/gallery/16.jpg" alt="Image 16" onclick="openImage(this)">
+             <img src="/images/gallery/17.jpg" alt="Image 17" onclick="openImage(this)">
+             <img src="/images/gallery/18.jpg" alt="Image 18" onclick="openImage(this)">
+             <img src="/images/gallery/19.jpg" alt="Image 19" onclick="openImage(this)">
+             <img src="/images/gallery/20.jpg" alt="Image 20" onclick="openImage(this)">
+             <img src="/images/gallery/21.jpg" alt="Image 21" onclick="openImage(this)">
+             <img src="/images/gallery/22.jpg" alt="Image 22" onclick="openImage(this)">
+             <img src="/images/gallery/23.jpg" alt="Image 23" onclick="openImage(this)">
+             <img src="/images/gallery/24.jpg" alt="Image 24" onclick="openImage(this)">
+             <img src="/images/gallery/25.jpg" alt="Image 25" onclick="openImage(this)">
+             <img src="/images/gallery/26.jpg" alt="Image 26" onclick="openImage(this)">
+             <img src="/images/gallery/27.jpg" alt="Image 27" onclick="openImage(this)">
+             <img src="/images/gallery/28.jpg" alt="Image 28" onclick="openImage(this)">
+             <img src="/images/gallery/29.jpg" alt="Image 29" onclick="openImage(this)">
+             <img src="/images/gallery/30.jpg" alt="Image 30" onclick="openImage(this)">
+             <img src="/images/gallery/31.jpg" alt="Image 31" onclick="openImage(this)">
 
+             <!-- Repeat for 35 images -->
+          </div>
+          <div class="arrow right-arrow" onclick="scrollGallery(1)">&#8250;</div>
+        </div>
+      </div>
+      
+      <!-- Modal for Enlarged Image -->
+      <div id="imageModal" class="modal" onclick="closeImage()">
+        <img id="modalImage" alt="Enlarged Image">
+      </div>
     <!--Equipment Section-->
 
     <div class="equipment-section">
