--- a/index.html
+++ b/index.html
@@ -54,37 +54,37 @@
           <div class="arrow left-arrow" onclick="scrollGallery(-1)">&#8249;</div>
           <div class="gallery">
              <!-- Add your images here -->
-             <img src="/images/gallery/1.jpg" alt="Image 1" onclick="openImage(this)">
-             <img src="/images/gallery/2.jpg" alt="Image 2" onclick="openImage(this)">
-             <img src="/images/gallery/3.jpg" alt="Image 3" onclick="openImage(this)">
-             <img src="/images/gallery/4.jpg" alt="Image 4" onclick="openImage(this)">
-             <img src="/images/gallery/5.jpg" alt="Image 5" onclick="openImage(this)">
-             <img src="/images/gallery/6.jpg" alt="Image 6" onclick="openImage(this)">
-             <img src="/images/gallery/7.jpg" alt="Image 7" onclick="openImage(this)">
-             <img src="/images/gallery/8.jpg" alt="Image 8" onclick="openImage(this)">
-             <img src="/images/gallery/9.jpg" alt="Image 9" onclick="openImage(this)">
-             <img src="/images/gallery/10.jpg" alt="Image 10" onclick="openImage(this)">
-             <img src="/images/gallery/11.jpg" alt="Image 11" onclick="openImage(this)">
-             <img src="/images/gallery/12.jpg" alt="Image 12" onclick="openImage(this)">
-             <img src="/images/gallery/13.jpg" alt="Image 13" onclick="openImage(this)">
-             <img src="/images/gallery/14.jpg" alt="Image 14" onclick="openImage(this)">
-             <img src="/images/gallery/15.jpg" alt="Image 15" onclick="openImage(this)">
-             <img src="/images/gallery/16.jpg" alt="Image 16" onclick="openImage(this)">
-             <img src="/images/gallery/17.jpg" alt="Image 17" onclick="openImage(this)">
-             <img src="/images/gallery/18.jpg" alt="Image 18" onclick="openImage(this)">
-             <img src="/images/gallery/19.jpg" alt="Image 19" onclick="openImage(this)">
-             <img src="/images/gallery/20.jpg" alt="Image 20" onclick="openImage(this)">
-             <img src="/images/gallery/21.jpg" alt="Image 21" onclick="openImage(this)">
-             <img src="/images/gallery/22.jpg" alt="Image 22" onclick="openImage(this)">
-             <img src="/images/gallery/23.jpg" alt="Image 23" onclick="openImage(this)">
-             <img src="/images/gallery/24.jpg" alt="Image 24" onclick="openImage(this)">
-             <img src="/images/gallery/25.jpg" alt="Image 25" onclick="openImage(this)">
-             <img src="/images/gallery/26.jpg" alt="Image 26" onclick="openImage(this)">
-             <img src="/images/gallery/27.jpg" alt="Image 27" onclick="openImage(this)">
-             <img src="/images/gallery/28.jpg" alt="Image 28" onclick="openImage(this)">
-             <img src="/images/gallery/29.jpg" alt="Image 29" onclick="openImage(this)">
-             <img src="/images/gallery/30.jpg" alt="Image 30" onclick="openImage(this)">
-             <img src="/images/gallery/31.jpg" alt="Image 31" onclick="openImage(this)">
+             <img src="/images/1.jpg" alt="Image 1" onclick="openImage(this)">
+             <img src="/images/2.jpg" alt="Image 2" onclick="openImage(this)">
+             <img src="/images/3.jpg" alt="Image 3" onclick="openImage(this)">
+             <img src="/images/4.jpg" alt="Image 4" onclick="openImage(this)">
+             <img src="/images/5.jpg" alt="Image 5" onclick="openImage(this)">
+             <img src="/images/6.jpg" alt="Image 6" onclick="openImage(this)">
+             <img src="/images/7.jpg" alt="Image 7" onclick="openImage(this)">
+             <img src="/images/8.jpg" alt="Image 8" onclick="openImage(this)">
+             <img src="/images/9.jpg" alt="Image 9" onclick="openImage(this)">
+             <img src="/images/10.jpg" alt="Image 10" onclick="openImage(this)">
+             <img src="/images/11.jpg" alt="Image 11" onclick="openImage(this)">
+             <img src="/images/12.jpg" alt="Image 12" onclick="openImage(this)">
+             <img src="/images/13.jpg" alt="Image 13" onclick="openImage(this)">
+             <img src="/images/14.jpg" alt="Image 14" onclick="openImage(this)">
+             <img src="/images/15.jpg" alt="Image 15" onclick="openImage(this)">
+             <img src="/images/16.jpg" alt="Image 16" onclick="openImage(this)">
+             <img src="/images/17.jpg" alt="Image 17" onclick="openImage(this)">
+             <img src="/images/18.jpg" alt="Image 18" onclick="openImage(this)">
+             <img src="/images/19.jpg" alt="Image 19" onclick="openImage(this)">
+             <img src="/images/20.jpg" alt="Image 20" onclick="openImage(this)">
+             <img src="/images/21.jpg" alt="Image 21" onclick="openImage(this)">
+             <img src="/images/22.jpg" alt="Image 22" onclick="openImage(this)">
+             <img src="/images/23.jpg" alt="Image 23" onclick="openImage(this)">
+             <img src="/images/24.jpg" alt="Image 24" onclick="openImage(this)">
+             <img src="/images/25.jpg" alt="Image 25" onclick="openImage(this)">
+             <img src="/images/26.jpg" alt="Image 26" onclick="openImage(this)">
+             <img src="/images/27.jpg" alt="Image 27" onclick="openImage(this)">
+             <img src="/images/28.jpg" alt="Image 28" onclick="openImage(this)">
+             <img src="/images/29.jpg" alt="Image 29" onclick="openImage(this)">
+             <img src="/images/30.jpg" alt="Image 30" onclick="openImage(this)">
+             <img src="/images/31.jpg" alt="Image 31" onclick="openImage(this)">
 
              <!-- Repeat for 35 images -->
           </div>
