--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       </div>
       
       <!-- Modal for Enlarged Image -->
-      <div id="imageLightbox" class="lightbox" onclick="closeImage()">
-        <img id="lightboxImage" alt="Enlarged Image">
+    <div id="imageModal" class="modal" onclick="closeImage()">
+        <img id="modalImage" alt="Enlarged Image">
       </div>
     <!--Equipment Section-->
 
