--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
             <h4>Connect with Us</h4>
             <div class="icon-group">
                 <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/humanitarian_clinic/?igsh=Mmw1ZXhwMDNkOXA0" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="https://g.co/kgs/dyQfKWv" class="social-icon"><i class="fab fa-google"></i></a>
             </div>
         </div>
     </div>
