--- a/index.html
+++ b/index.html
@@ -98,31 +98,31 @@
       </div>
     <!--Equipment Section-->
 
-    <div class="equipment-section">
-        <h2 class="equipment-heading">Equipment</h2>
-        <div class="equipment">
-            <div class="equipment-wrapper" id="equipmentGallery">
-                <!-- Equipment Images -->
-                <img src="images/equipment/1.jpg" alt="Equipment Image 1" class="equipment-image">
-                <img src="images/equipment/2.jpg" alt="Equipment Image 2" class="equipment-image">
-                <img src="images/equipment/3.jpg" alt="Equipment Image 3" class="equipment-image">
-                <img src="images/equipment/4.jpg" alt="Equipment Image 4" class="equipment-image">
-                <img src="images/equipment/5.jpg" alt="Equipment Image 5" class="equipment-image">
-                <img src="images/equipment/6.jpg" alt="Equipment Image 6" class="equipment-image">
-                <img src="images/equipment/7.jpg" alt="Equipment Image 7" class="equipment-image">
-                <img src="images/equipment/8.jpg" alt="Equipment Image 8" class="equipment-image">
-                <img src="images/equipment/9.jpg" alt="Equipment Image 9" class="equipment-image">
-                <img src="images/equipment/10.jpg" alt="Equipment Image 10" class="equipment-image">
-                <img src="images/equipment/11.jpg" alt="Equipment Image 11" class="equipment-image">
-                <img src="images/equipment/12.jpg" alt="Equipment Image 12" class="equipment-image">
-                <img src="images/equipment/13.jpg" alt="Equipment Image 13" class="equipment-image">
-                <img src="images/equipment/14.jpg" alt="Equipment Image 14" class="equipment-image">
-                <img src="images/equipment/15.jpg" alt="Equipment Image 15" class="equipment-image">
-                <img src="images/equipment/16.jpg" alt="Equipment Image 16" class="equipment-image">
-                <img src="images/equipment/17.jpg" alt="Equipment Image 17" class="equipment-image">
-            </div>
+      <section class="equipment-section">
+        <h2 class="equipment-heading">Our Equipment</h2>
+        <div class="equipment-container">
+          <div class="equipment-images">
+            <!-- Repeat this image tag 17 times for each equipment image -->
+            <img src="images/equipment/1.jpg" alt="Equipment 1" class="equipment-item">
+            <img src="images/equipment/2.jpg" alt="Equipment 2" class="equipment-item">
+            <img src="images/equipment/3.jpg" alt="Equipment 3" class="equipment-item">
+            <img src="images/equipment/4.jpg" alt="Equipment 4" class="equipment-item">
+            <img src="images/equipment/5.jpg" alt="Equipment 5" class="equipment-item">
+            <img src="images/equipment/6.jpg" alt="Equipment 6" class="equipment-item">
+            <img src="images/equipment/7.jpg" alt="Equipment 7" class="equipment-item">
+            <img src="images/equipment/8.jpg" alt="Equipment 8" class="equipment-item">
+            <img src="images/equipment/9.jpg" alt="Equipment 9" class="equipment-item">
+            <img src="images/equipment/10.jpg" alt="Equipment 10" class="equipment-item">
+            <img src="images/equipment/11.jpg" alt="Equipment 11" class="equipment-item">
+            <img src="images/equipment/12.jpg" alt="Equipment 12" class="equipment-item">
+            <img src="images/equipment/13.jpg" alt="Equipment 13" class="equipment-item">
+            <img src="images/equipment/14.jpg" alt="Equipment 14" class="equipment-item">
+            <img src="images/equipment/15.jpg" alt="Equipment 15" class="equipment-item">
+            <img src="images/equipment/16.jpg" alt="Equipment 16" class="equipment-item">
+            <img src="images/equipment/17.jpg" alt="Equipment 17" class="equipment-item">
+          </div>
         </div>
-    </div>
+      </section>
     
     <!--About Us Section-->
     
