--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="social-links fade-in">
             <h4>Connect with Us</h4>
             <div class="icon-group">
-                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61569533703021&mibextid=ZbWKwL" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/humanitarian_clinic/?igsh=Mmw1ZXhwMDNkOXA0" class="social-icon"><i class="fab fa-instagram"></i></a>
                 <a href="https://g.co/kgs/dyQfKWv" class="social-icon"><i class="fab fa-google"></i></a>
             </div>
